# src/features/authenetication/controllers/auth.controller.ts
@@ -1,7 +1,8 @@
 import { Request, Response, NextFunction } from "express";
 import AuthService from "../services/auth.service";
 import { generateRefreshToken, generateToken } from "../../../utils/jwt";
-
+import appResponse from "../../../lib/appResponse";
+import { BadRequestError } from "../../../lib/appError";
 class AuthController {
   static async register(
     req: Request,
@@ -9,10 +10,15 @@ class AuthController {
     next: NextFunction
   ): Promise<void> {
     try {
-      const { fullName, email, password ,profileImage} = req.body;
-      const user = await AuthService.register({ fullName, email,profileImage, password});
-      res.status(201).json({ message: "User registered successfully", user });
-    } catch (error: any) {
+      const { fullName, email, password, profileImage } = req.body;
+      const newUser = await AuthService.register({
+        fullName,
+        email,
+        profileImage,
+        password,
+      });
+      res.send(appResponse("User registered successfully", newUser));
+    } catch (error) {
       next(error);
       console.log(error);
     }
@@ -26,7 +32,7 @@ class AuthController {
     try {
       const { email, password } = req.body;
       const { user } = await AuthService.login(email, password);
-      
+
       const token = generateToken(user.id);
       const refreshToken = generateRefreshToken(user.id);
 
@@ -42,7 +48,8 @@ class AuthController {
         sameSite: "strict",
       });
       res.status(200).json({ message: "Login successful", token, user });
-    } catch (error: any) {
+
+    } catch (error) {
       console.log(error);
       next(error);
     }
@@ -56,8 +63,8 @@ class AuthController {
     try {
       const { email } = req.body;
       const result = await AuthService.forgotPassword(email);
-      res.status(200).json({ message: result });
-    } catch (error: any) {
+      res.send(appResponse("Message:", result));
+    } catch (error) {
       next(error);
     }
   }
@@ -68,18 +75,34 @@ class AuthController {
     next: NextFunction
   ): Promise<void> {
     try {
-      const { token } = req.params;
-      const { password, confirmPassword } = req.body;
-      if (password !== confirmPassword) {
-        throw new Error("Passwords do not match");
-      }
-      const result = await AuthService.resetPassword(token, password);
-      res.status(200).json({ message: result });
-    } catch (error: any) {
+      const { password, otp } = req.body;
+      if(!otp || !password) throw new BadRequestError("Otp and password are required");
+      const result = await AuthService.resetPassword(otp, password);
+      res.send(appResponse("message:", result));
+    } catch (error) {
       console.log(error);
       next(error);
     }
   }
+
+
+
+  // static async logout(
+  //   req: Request,
+  //   res: Response,
+  //   next: NextFunction
+  // ): Promise<void> {
+  //   try {
+  //     const token = req.headers.authorization?.split(" ")[1];
+  //     if (!token) {
+  //       throw new Error("Token not provided");
+  //     }
+  //     const result = await AuthService.logout(token);
+  //     res.send(appResponse("Message:", result));
+  //   } catch (error) {
+  //     next(error);
+  //   }
+  // }
 
   static async logout(
     req: Request,
@@ -87,16 +110,18 @@ class AuthController {
     next: NextFunction
   ): Promise<void> {
     try {
-      const token = req.headers.authorization?.split(" ")[1];
+      const token = req.cookies?.token; 
       if (!token) {
         throw new Error("Token not provided");
       }
       const result = await AuthService.logout(token);
-      res.status(200).json({ message: result });
-    } catch (error: any) {
+      res.clearCookie("token"); 
+      res.send(appResponse("Message:", result));
+    } catch (error) {
       next(error);
     }
   }
+  
 }
 
 export default AuthController;
